fabric/support/test/tests/construct_runtime_ui/conflicting_index.rs
use fabric_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		UncheckedExtrinsic = UncheckedExtrinsic,
		Block = Block,
		NodeBlock = Block,
	{
		System: system::{},
		Noble1: noble1::{} = 0,
	}
}

fn main() {}
